# qos-android

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  build.bat  build.py  build.sh  changelog.md  update.json
core/: Cargo.toml
core/jni/src/: main.cpp
core/src/: lib.rs
core/src/algorithms/: cpu_math.rs  filter_math.rs  kalman_math.rs  memory_math.rs  mod.rs  poll_math.rs  storage_math.rs  thermal_math.rs  tolerance.rs
core/src/bindings/: api_entry.rs  c_api.rs  ffi.rs  mod.rs  sys.rs
core/src/common/: error.rs  psi.rs  state.rs  traits.rs
core/src/config/: kernel_limits.rs  loop_settings.rs  mod.rs  tunables.rs
core/src/controllers/: blocker_impl.rs  cleaner_impl.rs  cpu_impl.rs  cpu_logic.rs  display_impl.rs  memory_impl.rs  memory_logic.rs  mod.rs  signal_impl.rs  storage_impl.rs  storage_logic.rs  thermal_impl.rs  tweaker_logic.rs
core/src/core/: interfaces.rs  lifecycle.rs  mod.rs
core/src/daemon/: logging.rs  mod.rs  runtime.rs  state.rs  traits.rs  types.rs
core/src/hal/: battery.rs  bridge.rs  cached_file.rs  filesystem.rs  kernel.rs  mod.rs  monitored_file.rs  properties.rs  surface_flinger.rs  thermal.rs  traversal.rs
core/src/monitors/: disk_monitor.rs  mod.rs  psi_monitor.rs  vm_monitor.rs
core/src/registry/: boot_tweaks.rs  file_tweaks.rs  mod.rs  prop_tweaks.rs  scheduler_io.rs
core/src/resources/: discovery.rs  mod.rs  sys_paths.rs
core/src/utils/: cached_file.rs  math.rs  mod.rs  monitored_file.rs  strings.rs  tier.rs
docs/: BUILD.md  PORTING.md  TUNING.md
enhancer/: customize.sh  service.sh
magisk-module/: config.ini  customize.sh  module.prop  service.sh  system.prop
magisk-module/common/: boot_animation.sh  install.sh
magisk-module/common/addon/Utils/: install.sh
native/include/: config_loader.h  device_compat.h  logging.h  native_bridge.h
native/include/runtime/: diagnostics.h  io_priority.h  limits.h  memory.h  protection.h  scheduler.h  sentinel.h
native/src/: config_loader.cpp  device_compat.cpp  main.cpp  native_bridge.cpp
native/src/runtime/: diagnostics.cpp  io_priority.cpp  limits.cpp  memory.cpp  protection.cpp  scheduler.cpp  sentinel.cpp
ndk-build/c-build/jni/: Android.mk  Application.mk
ndk-build/c-build/jni/include/: memory-manager.h  refresh-manager.h  system-tweaker.h  system-utils.h
ndk-build/c-build/jni/src/: main.c  memory-manager.c  refresh-manager.c  system-tweaker.c  system-utils.c
ndk-build/cpp-build/: build.bat
ndk-build/cpp-build/jni/: Android.mk  Application.mk
ndk-build/cpp-build/jni/include/: boost_manager.h  config.h  cpu_manager.h  log_utils.h  memory_manager.h  system_utils.h  touch_monitor.h
ndk-build/cpp-build/jni/include/cutils/: properties.h
ndk-build/cpp-build/jni/src/: boost_manager.cpp  cpu_manager.cpp  main.cpp  memory_manager.cpp  system_utils.cpp  touch_monitor.cpp
ndk-build/jni/: Android.mk  Application.mk
ndk-build/jni/include/: adaptive-daemon.h  adaptive_memory_manager.h  config.h  fd_wrapper.h  hardware-interface.h  logger.h  logging.h  memory-manager.h  refresh-rate-manager.h
ndk-build/jni/src/: adaptive-daemon.cpp  adaptive_memory_manager.c  fd_wrapper.c  hardware-interface.c  main.cpp  main_daemon.c  memory-manager.cpp  refresh-rate-manager.cpp  system_tweaker.c  system_utils.c
src/: Cargo.toml  build.sh
src/jni/: Android.mk
src/jni/include/: adaptive_refresh_rate_manager.h  daemon_interface.h  fd_wrapper.h  logging.h  main_daemon.h  native_bridge.h  system_tweaker.h  system_utils.h
src/jni/src/: adaptive_memory_manager.c  adaptive_refresh_rate_manager.c  daemon_interface.cpp  main.cpp  native_bridge.cpp  system_tweaker.cpp  system_utils.cpp
src/src/: c_api.rs  ffi.rs  lib.rs  logger.rs  memory_logic.rs  network_logic.rs  refresh_logic.rs  storage_logic.rs  system_utils.rs  tweaker_logic.rs  vm_logic.rs
src/src/bindings/: c_api.rs  ffi.rs
src/src/common/: error.rs  fs.rs  logger.rs  mod.rs  psi.rs  state.rs  traits.rs
src/src/controllers/: display_logic.rs  memory_logic.rs  mod.rs  signal_logic.rs  storage_logic.rs  tweaker_logic.rs
