[package]
name = "qos_logic"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2024"

[lib]
name = "qos_logic"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
android_logger = "0.15"
rustix = { version = "1.1", features = ["fs", "event", "mm", "param"] }